bdr.BDR.scala.error
Compilation error:
BDR:6: error: not found: value getIndication
  else if (getIndication()=='L'){
           ^BDR:9: error: not found: value getIndication
  else if (getIndication()=='I'){
           ^BDR:13: error: not found: value getIndication
  else if (getIndication()=='A'){
           ^BDR:15: error: not found: value getIndication
  else if (getIndication()=='B'){
           ^BDR:17: error: not found: value getIndication
  else if (getIndication()=='C'){
           ^BDR:19: error: not found: value getIndication
  else if (getIndication()=='Z'){
           ^BDR:21: error: not found: value getIndication
  else if (getIndication()=='Y'){
           ^BDR:23: error: not found: value getIndication
  else if (getIndication()=='X'){
           ^